--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 PORT = 4000
-MONGO_URL = 'mongodb://127.0.0.1:27017/boilerplate'
-COOKIE_SECRET = "boilerplate"
+MONGO_URL = 'mongodb://127.0.0.1:27017/naverPriceWatcher'
+COOKIE_SECRET = "naverPriceWatcher"
 CLIENT_URL = 'http://localhost:3000'
 SERVER_URL = 'http://localhost:4000'
