--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "boilerplate",
+    "name": "naverPriceWatcher",
     "main": "index.js",
     "scripts": {
         "start": "nodemon --exec cross-env NODE_ENV=development babel-node src/index.js",
@@ -14,6 +14,7 @@
         "helmet": "^3.22.0",
         "mongoose": "^5.9.16",
         "morgan": "^1.10.0",
+        "node-schedule": "^1.3.2",
         "puppeteer": "^5.3.1",
         "swagger-jsdoc": "^4.3.0",
         "swagger-ui-express": "^4.1.4"
