--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "express": "^4.17.1",
         "express-session": "^1.17.1",
         "helmet": "^3.22.0",
+        "json2csv": "^5.0.3",
         "mongoose": "^5.9.16",
         "morgan": "^1.10.0",
         "node-schedule": "^1.3.2",
