--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "@sentry/node": "^5.20.0",
         "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
         "cross-env": "^7.0.2",
         "express": "^4.17.1",
         "express-session": "^1.17.1",
